Fix problem with whitespace in news post widgets

--- a/CSS/src_cr-new.less
+++ b/CSS/src_cr-new.less
@@ -20,7 +20,7 @@
 *   dr-css-1.9: Styling of h1-header sections..................................................443
 *   dr-css-1.10: Order of the Crimson Key......................................................469
 *   dr-css-1.11: News..........................................................................618
-*   dr-css-1.12: Other (TBD)...................................................................670
+*   dr-css-1.12: Other (TBD)...................................................................677
 */
 
 /*! 
@@ -652,6 +652,13 @@ body:not(.crimson-key-home):not(.crimson-key) .row.h1-header .column {
 			margin-bottom: .5rem;
 			width: 100%;
 		}
+	}
+}
+
+.widget_categories,
+.widget_archive {
+	ul {
+		padding-left: 0;
 	}
 }
 
